--- a/resources/windows/wix/properties.wxs.erb
+++ b/resources/windows/wix/properties.wxs.erb
@@ -5,14 +5,14 @@
     <ComponentGroup Id="Include_Properties" />
 
     <!-- Add/Remove Programs icon and help link -->
-    <Icon Id="$(var.OurCompanyNameWord).ico" SourceFile="conf\windows\stage\misc\puppetlabs.ico"/>
-    <Property Id="ARPPRODUCTICON" Value="$(var.OurCompanyNameWord).ico" />
-    <Property Id="ARPHELPLINK" Value="$(var.HelpLink)" />
+    <Icon Id="<%= settings[:company_id] %>.ico" SourceFile="conf\windows\stage\misc\puppetlabs.ico"/>
+    <Property Id="ARPPRODUCTICON" Value="<%= settings[:company_id] %>.ico" />
+    <Property Id="ARPHELPLINK" Value="<%= settings[:HelpLink] %>" />
     <!-- Save destination folder in Add/Remove programs (ARP) registry key -->
     <SetProperty Id="ARPINSTALLLOCATION" Value="[INSTALLDIR]" After="CostFinalize" />
 
     <!-- This property is used in the localization strings for the GUI -->
-    <Property Id="VersionUIString" Value="$(var.VersionUIString)" />
+    <Property Id="VersionUIString" Value="<%= @version.sub(/\.g[0-9a-z]{7}$/, '') %>" />
 
     <!--
       By default, install puppet agent to run as LocalSystem. Password
@@ -32,13 +32,13 @@
     <Property Id="INSTALLDIR">
       <!-- Recall the property in repair, upgrade, and uninstall scenarios -->
       <RegistrySearch Id="RecallInstallDir" Root="HKLM"
-        Key="SOFTWARE\$(var.OurCompanyName)\$(var.OurProductNameWord)"
-        Name="$(var.RememberedInstallDirRegKey)" Type="raw" Win64="no" />
+        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:product_id] %>"
+        Name="<%= settings[:RememberedInstallDirRegKey] %>" Type="raw" Win64="no" />
     </Property>
     <Property Id="INSTALLDIR_X86" >
       <!-- Recall the property in repair, upgrade, and uninstall scenarios -->
       <RegistrySearch Id="RecallInstallDirx86" Root="HKLM"
-        Key="SOFTWARE\$(var.OurCompanyName)\$(var.OurProductNameWord)"
+        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:product_id] %>"
         Name="RememberedInstallDir" Type="raw" Win64="no" />
     </Property>
     <!-- Note the static default value of "puppet".  This will be overriden by
@@ -46,29 +46,29 @@
     <Property Id="PUPPET_MASTER_SERVER">
       <!-- Recall the property in repair, upgrade, and uninstall scenarios -->
       <RegistrySearch Id="RecallPuppetMasterServer" Root="HKLM"
-        Key="SOFTWARE\$(var.OurCompanyName)\$(var.OurCommonProductNameWord)"
+        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetMasterServer" Type="raw" Win64="no" />
     </Property>
     <Property Id="PUPPET_AGENT_ENVIRONMENT">
       <!-- Recall the property in repair, upgrade, and uninstall scenarios -->
       <RegistrySearch Id="RecallPuppetAgentEnvironment" Root="HKLM"
-        Key="SOFTWARE\$(var.OurCompanyName)\$(var.OurCommonProductNameWord)"
+        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetAgentEnvironment" Type="raw" Win64="no" />
     </Property>
     <Property Id="PUPPET_AGENT_CERTNAME">
       <!-- Recall the property in repair, upgrade, and uninstall scenarios -->
       <RegistrySearch Id="RecallPuppetAgentCertname" Root="HKLM"
-        Key="SOFTWARE\$(var.OurCompanyName)\$(var.OurCommonProductNameWord)"
+        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetAgentCertname" Type="raw" Win64="no" />
     </Property>
     <Property Id="PUPPET_CA_SERVER">
       <RegistrySearch Id="RecallPuppetCAServer" Root="HKLM"
-        Key="SOFTWARE\$(var.OurCompanyName)\$(var.OurCommonProductNameWord)"
+        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetCaServer" Type="raw" Win64="no" />
     </Property>
     <Property Id="PUPPET_AGENT_STARTUP_MODE">
       <RegistrySearch Id="RecallPuppetAgentStartupMode" Root="HKLM"
-        Key="SOFTWARE\$(var.OurCompanyName)\$(var.OurCommonProductNameWord)"
+        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetAgentStartupMode" Type="raw" Win64="no" />
     </Property
 
