(MAINT) Move INSTALLDIR to properties

--- a/resources/windows/wix/properties.wxs.erb
+++ b/resources/windows/wix/properties.wxs.erb
@@ -72,5 +72,12 @@
         Name="RememberedPuppetAgentStartupMode" Type="raw" Win64="no" />
     </Property
 
+    <Property Id="INSTALLDIR">
+      <RegistrySearch Id="RecallInstallDir" Root="HKLM" Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:product_id] %>" Name="<%= settings[:RememberedInstallDirRegKey] %>" Type="raw" Win64="<%= settings[:win64] %>" />
+    </Property>
+    <Property Id="INSTALLDIR_X86" >
+      <RegistrySearch Id="RecallInstallDirx86" Root="HKLM" Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:product_id] %>" Name="<%= settings[:RememberedInstallDirRegKey] %>" Type="raw" Win64="<%= settings[:win64] %>" />
+    </Property>
+
   </Fragment>
 </Wix>
