--- a/resources/windows/wix/service.puppet.wxs.erb
+++ b/resources/windows/wix/service.puppet.wxs.erb
@@ -5,11 +5,11 @@
     <DirectoryRef Id="TBD">  # The ID has to match the Ruby Bin directory
       <!--Seriously?... http://stackoverflow.com/questions/9419411/wix-setting-service-startup-type-using-a-property-property-not-recognized -->
       <!-- Yep, Seriously - http://sourceforge.net/mailarchive/forum.php?thread_name=CANJN1a6gDE2tUUnP4SE05m8Ojh2q0Y8LrWOxbrF89YyJJCHn1A%40mail.gmail.com&forum_name=wix-users -->
-      <Component Id='PuppetServiceAutomatic' Guid="639ECD7F-6186-43D5-9E1A-FC0278DBEE15" Win64="$(var.Win64)">
+      <Component Id='PuppetServiceAutomatic' Guid="639ECD7F-6186-43D5-9E1A-FC0278DBEE15" Win64="<%= settings[:win64] %>">
         <Condition>
           <![CDATA[ (PUPPET_AGENT_STARTUP_MODE ~<> "manual") AND (PUPPET_AGENT_STARTUP_MODE ~<> "disabled") ]]>
         </Condition>
-        <File Id="RubyExeAutomatic" KeyPath="yes" Source="stagedir\sys\ruby\bin\ruby.exe" />
+        <File Id="RubyExeAutomatic" KeyPath="yes" Source="SourceDir\ProgramFiles64Folder\PuppetLabs\Puppet\bin\ruby.exe" />
 
         <ServiceInstall Id="ServiceInstaller"
           Account="[PUPPET_AGENT_ACCOUNT_DOMAIN]\[PUPPET_AGENT_ACCOUNT_USER]"
@@ -17,20 +17,20 @@
           Description="Periodically fetches and applies configurations from a Puppet master server."
           DisplayName="Puppet Agent"
           Interactive="no"
-          Name="$(var.PuppetServiceName)"
+          Name="<%= settings[:PuppetServiceName] %>"
           Start="auto"
           Type="ownProcess"
           ErrorControl="normal"
           Vital="yes"
           Arguments="-rubygems &quot;[INSTALLDIR]service\daemon.rb&quot;"
       />
-        <ServiceControl Id="ServiceControlOptions" Start="install" Stop="both" Remove="uninstall" Name="$(var.PuppetServiceName)" Wait="yes" />
+        <ServiceControl Id="ServiceControlOptions" Start="install" Stop="both" Remove="uninstall" Name="<%= settings[:PuppetServiceName] %>" Wait="yes" />
       </Component>
-      <Component Id='PuppetServiceManual' Guid="752A5A25-9619-4EBA-AA8B-12D8C8688236" Win64="$(var.Win64)">
+      <Component Id='PuppetServiceManual' Guid="752A5A25-9619-4EBA-AA8B-12D8C8688236" Win64="<%= settings[:win64] %>">
         <Condition>
           <![CDATA[PUPPET_AGENT_STARTUP_MODE ~= "manual"]]>
         </Condition>
-        <File Id="RubyExeManual" KeyPath="yes" Source="stagedir\sys\ruby\bin\ruby.exe" />
+        <File Id="RubyExeManual" KeyPath="yes" Source="SourceDir\ProgramFiles64Folder\PuppetLabs\Puppet\bin\ruby.exe" />
 
         <ServiceInstall Id="ServiceInstallerManual"
           Account="[PUPPET_AGENT_ACCOUNT_DOMAIN]\[PUPPET_AGENT_ACCOUNT_USER]"
@@ -38,20 +38,20 @@
           Description="Periodically fetches and applies configurations from a Puppet master server."
           DisplayName="Puppet Agent"
           Interactive="no"
-          Name="$(var.PuppetServiceName)"
+          Name="<%= settings[:PuppetServiceName] %>"
           Start="demand"
           Type="ownProcess"
           ErrorControl="normal"
           Vital="yes"
           Arguments="-rubygems &quot;[INSTALLDIR]service\daemon.rb&quot;"
       />
-        <ServiceControl Id="ServiceControlOptionsManual" Stop="both" Remove="uninstall" Name="$(var.PuppetServiceName)" Wait="yes" />
+        <ServiceControl Id="ServiceControlOptionsManual" Stop="both" Remove="uninstall" Name="<%= settings[:PuppetServiceName] %>" Wait="yes" />
       </Component>
-      <Component Id='PuppetServiceDisabled' Guid="4D3A8CAF-C675-46AC-B3AD-75F00581D0DB" Win64="$(var.Win64)">
+      <Component Id='PuppetServiceDisabled' Guid="4D3A8CAF-C675-46AC-B3AD-75F00581D0DB" Win64="<%= settings[:win64] %>">
         <Condition>
           <![CDATA[PUPPET_AGENT_STARTUP_MODE ~= "disabled"]]>
         </Condition>
-        <File Id="RubyExeDisabled" KeyPath="yes" Source="stagedir\sys\ruby\bin\ruby.exe" />
+        <File Id="RubyExeDisabled" KeyPath="yes" Source="SourceDir\ProgramFiles64Folder\PuppetLabs\Puppet\bin\ruby.exe" />
 
         <ServiceInstall Id="ServiceInstallerDisabled"
           Account="[PUPPET_AGENT_ACCOUNT_DOMAIN]\[PUPPET_AGENT_ACCOUNT_USER]"
@@ -59,14 +59,14 @@
           Description="Periodically fetches and applies configurations from a Puppet master server."
           DisplayName="Puppet Agent"
           Interactive="no"
-          Name="$(var.PuppetServiceName)"
+          Name="<%= settings[:PuppetServiceName] %>"
           Start="disabled"
           Type="ownProcess"
           ErrorControl="normal"
           Vital="yes"
           Arguments="-rubygems &quot;[INSTALLDIR]service\daemon.rb&quot;"
       />
-        <ServiceControl Id="ServiceControlOptionsDisabled" Stop="both" Remove="uninstall" Name="$(var.PuppetServiceName)" Wait="yes" />
+        <ServiceControl Id="ServiceControlOptionsDisabled" Stop="both" Remove="uninstall" Name="<%= settings[:PuppetServiceName] %>" Wait="yes" />
       </Component>
     </DirectoryRef>
   </Fragment>
