--- a/resources/windows/wix/service.mcollective.wxs.erb
+++ b/resources/windows/wix/service.mcollective.wxs.erb
@@ -1,13 +1,10 @@
 <?xml version='1.0' encoding='windows-1252'?>
 <Wix xmlns='http://schemas.microsoft.com/wix/2006/wi' xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
   <Fragment>
-    <ComponentGroup Id="Service_MARIONETTECOLLECTIVE">
-      <ComponentRef Id="Service_MARIONETTECOLLECTIVE_svc" />
-    </ComponentGroup>
-
-    <DirectoryRef Id="MARIONETTECOLLECTIVEBINDIR">
-      <Component Id='Service_MARIONETTECOLLECTIVE_svc'
+    <ComponentGroup Id="<%= get_service("marionette-collective").component_group_id %>">
+      <Component Id='McoService'
                  Guid="7601FCEA-90B3-CC69-6A69-4087FBC7292D"
+                 Directory="<%= get_service("marionette-collective").bindir_id %>"
                  Win64="<%= settings[:win64] %>">
         <File Id="RubyWExe"
               KeyPath="yes"
@@ -17,24 +14,23 @@
         puppet run that configures mcollective will allow it to start
         and set it to automatic -->
         <ServiceInstall Id="MCOServiceInstaller"
-          Account="[PUPPET_AGENT_ACCOUNT_DOMAIN]\[PUPPET_AGENT_ACCOUNT_USER]"
-          Password="[PUPPET_AGENT_ACCOUNT_PASSWORD]"
-          Description="Puppet Labs server orchestration framework"
-          DisplayName="Marionette Collective Server"
-          Interactive="no"
-          Name="mcollective"
-          Start="demand"
-          Type="ownProcess"
-          ErrorControl="normal"
-          Vital="yes"
-          Arguments="-I&quot;[INSTALLDIR]puppet\lib&quot; -rubygems &quot;[INSTALLDIR]puppet\bin\mcollectived&quot; --daemonize"
-          />
+                        Account="[PUPPET_AGENT_ACCOUNT_DOMAIN]\[PUPPET_AGENT_ACCOUNT_USER]"
+                        Password="[PUPPET_AGENT_ACCOUNT_PASSWORD]"
+                        Description="Puppet Labs server orchestration framework"
+                        DisplayName="Marionette Collective Server"
+                        Interactive="no"
+                        Name="mcollective"
+                        Start="demand"
+                        Type="ownProcess"
+                        ErrorControl="normal"
+                        Vital="yes"
+                        Arguments="-I&quot;[INSTALLDIR]puppet\lib&quot; -rubygems &quot;[INSTALLDIR]puppet\bin\mcollectived&quot; --daemonize" />
         <ServiceControl Id="MCOStartService"
                         Stop="both"
                         Remove="uninstall"
                         Name="mcollective"
                         Wait="yes" />
       </Component>
-    </DirectoryRef>
+    </ComponentGroup>
   </Fragment>
 </Wix>
