(RE-6507) Add USER_ACCOUNT Wix definitions
Normally the puppet services are run under LocalSystem, but the User
settings allow it to be overridden so that for example a Domain account
can be configured to run the services

--- a/resources/windows/wix/componentgroup.wxs.erb
+++ b/resources/windows/wix/componentgroup.wxs.erb
@@ -16,6 +16,8 @@
       <ComponentGroupRef Id="FragmentProperties" />
       <ComponentGroupRef Id="FragmentSequences" />
       <ComponentGroupRef Id="FragmentCustomActions" />
+      <!-- Ensure User Account Component is loaded -->
+      <ComponentRef Id="PuppetServiceUser" />
     </ComponentGroup>
 
     <UI>
