(RE-6758) Setup bin Shortcuts directory
Populate [INSTALLDIR]bin wih shortcuts to .bat files in
[INSTALLDIR]puppet\bin

--- a/resources/windows/wix/componentgroup.wxs.erb
+++ b/resources/windows/wix/componentgroup.wxs.erb
@@ -9,6 +9,7 @@
       <ComponentGroupRef Id="AppComponentGroup" />
       <ComponentGroupRef Id="AppDataComponentGroup" />
       <ComponentGroupRef Id="RegistryComponentGroup" />
+      <ComponentGroupRef Id="ShortCutsComponentGroup" />
       <%- get_services.each do |service| -%>
       <ComponentGroupRef Id="<%= service.component_group_id %>" />
       <%- end -%>
