(RE-6858) Add PATH/Environment to installer
The PATH definition and Environment Files are missing from the
Installer.

--- a/resources/windows/wix/componentgroup.wxs.erb
+++ b/resources/windows/wix/componentgroup.wxs.erb
@@ -17,6 +17,7 @@
       <ComponentGroupRef Id="FragmentProperties" />
       <ComponentGroupRef Id="FragmentSequences" />
       <ComponentGroupRef Id="FragmentCustomActions" />
+      <ComponentGroupRef Id="FragmentEnvironment" />
       <ComponentGroupRef Id="FragmentIcon" />
       <!-- Ensure User Account Component is loaded -->
       <ComponentRef Id="PuppetServiceUser" />
