(RE-6866) Update the bin directory to have symlinks
Currently INSTALLDIR\bin directory has .lnk shortcut
files in it. These will not work to start puppet or
anything, so we need to update it to use hardlinks.

In order to get symlinks we had to add a customaction
for each link. The actions will just run:

      cmd.exe /c mklink /H "link" "target"

The c flag stops a window from opening and H specifies
it is a hard link to a file

The custom actions were added to the sequences after the
InstallFinalize step because these links should likely
be created at the end

--- a/resources/windows/wix/shortcuts.wxs.erb
+++ b/resources/windows/wix/shortcuts.wxs.erb
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='windows-1252'?>
 <Wix xmlns='http://schemas.microsoft.com/wix/2006/wi' xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
   <!--
-    Puppet Agent Specific Registry Entries
+    Puppet Agent Specific shortcuts
     This overrides the generic file in the vanagon directory
   -->
   <Fragment>
@@ -70,5 +70,6 @@
       </Component>
 
     </ComponentGroup>
+
   </Fragment>
 </Wix>
