(RE-6852) Add Image Resource Variable definitions
These definitions point to the Image resouces used by the installer UI.
At the moment, the main image is set to the FOSS version of the BMP

--- a/resources/windows/wix/componentgroup.wxs.erb
+++ b/resources/windows/wix/componentgroup.wxs.erb
@@ -19,6 +19,7 @@
       <ComponentGroupRef Id="FragmentCustomActions" />
       <ComponentGroupRef Id="FragmentEnvironment" />
       <ComponentGroupRef Id="FragmentIcon" />
+      <ComponentGroupRef Id="FragmentVariables" />
       <!-- Ensure User Account Component is loaded -->
       <ComponentRef Id="PuppetServiceUser" />
     </ComponentGroup>
