(RE-6861) Add Launch Conditions
These were missing from the initial windows/msi

--- a/resources/windows/wix/componentgroup.wxs.erb
+++ b/resources/windows/wix/componentgroup.wxs.erb
@@ -20,6 +20,7 @@
       <ComponentGroupRef Id="FragmentEnvironment" />
       <ComponentGroupRef Id="FragmentIcon" />
       <ComponentGroupRef Id="FragmentVariables" />
+      <ComponentGroupRef Id="FragmentCondition" />
       <!-- Ensure User Account Component is loaded -->
       <ComponentRef Id="PuppetServiceUser" />
     </ComponentGroup>
