(RE-6903) Update banners & Icons to new branding
Apply the new branding assets to the installer banner pages and
installed icons.

--- a/resources/windows/wix/icon.wxs.erb
+++ b/resources/windows/wix/icon.wxs.erb
@@ -13,6 +13,6 @@
     <ComponentGroup Id="FragmentIcon" />
     <Icon
       Id="<%= settings[:company_id] %>.ico"
-      SourceFile="wix\icon\puppetlabs.ico"/>
+      SourceFile="wix\icon\puppet.ico"/>
   </Fragment>
 </Wix>
