--- a/resources/windows/wix/shortcuts.wxs.erb
+++ b/resources/windows/wix/shortcuts.wxs.erb
@@ -37,7 +37,7 @@
           WorkingDirectory="bin">
           <Icon
             Id="PuppetShortcutIcon"
-            SourceFile="wix\icon\puppetlabs.ico"/>
+            SourceFile="wix\icon\puppet.ico"/>
         </Shortcut>
         <Shortcut
           Id="FacterShortcut"
@@ -48,7 +48,7 @@
           WorkingDirectory="bin">
           <Icon
             Id="FacterShortcutIcon"
-            SourceFile="wix\icon\puppetlabs.ico"/>
+            SourceFile="wix\icon\puppet.ico"/>
         </Shortcut>
         <Shortcut
           Id="PuppetShellShortcut"
@@ -60,7 +60,7 @@
           WorkingDirectory="bin">
           <Icon
             Id="PuppetShellShortcutIcon"
-            SourceFile="wix\icon\puppetlabs.ico"/>
+            SourceFile="wix\icon\puppet.ico"/>
         </Shortcut>
         <RemoveFolder Id="ApplicationProgramsFolder" On="uninstall"/>
         <!-- This registry entry is required to be a keypath for this component -->
