--- a/resources/windows/wix/properties.wxs.erb
+++ b/resources/windows/wix/properties.wxs.erb
@@ -56,7 +56,7 @@
       <RegistrySearch
         Id="RecallPuppetMasterServer"
         Root="HKLM"
-        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
+        Key="SOFTWARE\<%= settings[:pl_company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetMasterServer"
         Type="raw"
         Win64="no" />
@@ -66,7 +66,7 @@
       <RegistrySearch
         Id="RecallPuppetAgentEnvironment"
         Root="HKLM"
-        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
+        Key="SOFTWARE\<%= settings[:pl_company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetAgentEnvironment"
         Type="raw"
         Win64="no" />
@@ -77,7 +77,7 @@
       <RegistrySearch
         Id="RecallPuppetAgentCertname"
         Root="HKLM"
-        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
+        Key="SOFTWARE\<%= settings[:pl_company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetAgentCertname"
         Type="raw"
         Win64="no" />
@@ -87,7 +87,7 @@
       <RegistrySearch
         Id="RecallPuppetCAServer"
         Root="HKLM"
-        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
+        Key="SOFTWARE\<%= settings[:pl_company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetCaServer"
         Type="raw"
         Win64="no" />
@@ -97,7 +97,7 @@
       <RegistrySearch
         Id="RecallPuppetAgentStartupMode"
         Root="HKLM"
-        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:common_product_id] %>"
+        Key="SOFTWARE\<%= settings[:pl_company_name] %>\<%= settings[:common_product_id] %>"
         Name="RememberedPuppetAgentStartupMode"
         Type="raw"
         Win64="no" />
@@ -107,7 +107,7 @@
       <RegistrySearch
         Id="RecallInstallDir"
         Root="HKLM"
-        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:product_id] %>"
+        Key="SOFTWARE\<%= settings[:pl_company_name] %>\<%= settings[:product_id] %>"
         Name="<%= settings[:RememberedInstallDirRegKey] %>"
         Type="raw"
         Win64="<%= settings[:win64] %>" />
@@ -117,7 +117,7 @@
       <RegistrySearch
         Id="RecallInstallDirx86"
         Root="HKLM"
-        Key="SOFTWARE\<%= settings[:company_name] %>\<%= settings[:product_id] %>"
+        Key="SOFTWARE\<%= settings[:pl_company_name] %>\<%= settings[:product_id] %>"
         Name="<%= settings[:RememberedInstallDirRegKey] %>"
         Type="raw"
         Win64="<%= settings[:win64] %>" />
