(RE-7587) Update pxp-agent to include paths to all lib directories
PXP-agent requires use of libraries located in puppet/bin and sys/ruby/bin, so
the service needs to be updated to include paths to thos directories

--- a/resources/windows/wix/service.pxp-agent.wxs.erb
+++ b/resources/windows/wix/service.pxp-agent.wxs.erb
@@ -34,7 +34,7 @@
                          Value=""
                          Type="expandable" />
           <RegistryValue Name="AppEnvironmentExtra"
-                         Value="PATH=[INSTALLDIR]pxp-agent\bin;%PATH%"
+                         Value="PATH=[INSTALLDIR]pxp-agent\bin;[INSTALLDIR]puppet\bin;[INSTALLDIR]sys\ruby\bin;%PATH%"
                          Type="multiString"
                          Action="append" />
           <!-- Skip responding to WM_QUIT and WM_CLOSE -->
