(PA-474) Add deprecation warning 32 on 64bit Windows OS
It is intended to remove support for 32bit agents on 64bit Windows Operating
Systems beginning in 2017.  This commit adds a deprecation warning dialog when
installing a 32bit MSI on a 64bit Operating system.  This commit also adds in
the required, but disabled, code to block a 32bit MSI from being installed via a
 Launch Condition for later use.

--- a/resources/windows/wix/condition.wxs.erb
+++ b/resources/windows/wix/condition.wxs.erb
@@ -8,15 +8,21 @@
     <ComponentGroup Id="FragmentCondition"/>
 
     <%- if @platform.architecture == "x64" -%>
-      <!-- http://wixtoolset.org/documentation/manual/v3/howtos/redistributables_and_install_checks/block_install_on_os.html
-        -->
+      <!-- http://wixtoolset.org/documentation/manual/v3/howtos/redistributables_and_install_checks/block_install_on_os.html -->
       <Condition Message="<%= settings[:product_name] %> is no longer supported on Windows Server 2003.">
         <![CDATA[Installed OR (VersionNT64 >= 600)]]>
       </Condition>
     <%- else %>
+      <!-- http://wixtoolset.org/documentation/manual/v3/howtos/redistributables_and_install_checks/block_install_on_os.html -->
       <Condition Message="<%= settings[:product_name] %> is no longer supported on Windows Server 2003.">
         <![CDATA[Installed OR (VersionNT >= 600)]]>
       </Condition>
+
+      <!--
+      <Condition Message="32 bit <%= settings[:product_name] %> is no longer supported on 64 bit Windows Operating Systems.">
+          <![CDATA[Installed OR VersionNT64]]>
+      </Condition>
+      -->
     <%- end -%>
 
     </Fragment>
